--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,10 +17,11 @@ steps:
 
 - script: |
     npm install
-    npm run build
+    npm run 
+    npm test
   displayName: 'npm install and build'
   
-- task: Npm@1
-  inputs:
-    command: 'install'
-- script: npx mocha 
+#- task: Npm@1
+#  inputs:
+#    command: 'install'
+#- script: npm install --only=dev
